--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <body>
   <script>
     self.artConfig = {"Art.Ery.remoteServer":true};
+    self.artConfigName = "Production";
   </script>
   <script type="text/javascript" charset="utf-8" src="/Client.js"></script>
 </body>
